[tool.poetry]
name = "desafio-kinea"
version = "0.1.0"
description = "Desafio Estágio Kinea - Consumir dados da API do YT"
authors = ["Emely Rocha"]
license = "-"
readme = "README.md"
packages = [{include = "desafio_kinea"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
isort = "^5.12.0"
pandas = "^2.1.1"
requests = "^2.31.0"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
